added some layout stuff

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Bootstrap CDN-->
+    <!-- Bootstrap CDN-->s
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
 
@@ -22,42 +23,20 @@
 </head>
 
 <body>
-
-    <div class="container">
-
-
-
-        <div class="panel panel-default" id="map">
-
-            <div class="panel-body">
-                Map Sapce
+    <div class="container" style="background-color: black; margin: 0 auto; width: 100%; height: 100%;">
+        <div class="row no-float">
+            <div class="col-lg-9 no-float" style="background-color: lightblue;">
+                <div>
+                    <h1>Map of Journal Locations</h1>
+                </div>
+            </div>
+            <div class="col-md-3 no-float" style="background-color: grey;">
+                <div>
+                    <h1>List of Journals</h1>
+                </div>
             </div>
         </div>
-
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Jounal Entry</h3>
-            </div>
-            <div class="panel-body">
-                Panel content
-            </div>
-        </div>
-        
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h3 class="panel-title">Other Entries</h3>
-            </div>
-            <div class="panel-body">
-                Panel content
-            </div>
-        </div>
-
-
-
     </div>
-
-
-
 
 
     <script src="assets/javascript/app.js"></script>
