added a floating button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <!-- Bootstrap CDN-->s
+    <!-- Bootstrap CDN-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -29,6 +29,7 @@
                 <div>
                     <h1>Map of Journal Locations</h1>
                 </div>
+                <button class="btn createJournalButton" href="#"><h1>ADD JOURNAL</h1></button>
             </div>
             <div class="col-md-3 no-float" style="background-color: grey;">
                 <div>
