--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <h1>Map of Journal Locations</h1>
                 </div>
                 <button class="btn createJournalButton" href="#"><h1>ADD JOURNAL</h1></button>
+                <div class="createJournalWindow" href="#"><h1>This is where you add a journal</h1></div>
             </div>
             <div class="col-md-3 no-float" style="background-color: grey;">
                 <div>
