--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Jounal Entry</h3>
+                <h3 class="panel-title">Journal Entry</h3>
             </div>
             <div class="panel-body">
                 Panel content
