--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div>
           <h1>Map of Journal Locations</h1>
         </div>
-        <button class="btn createJournalButton" href="#">
+        <button class="btn createJournalButton" style="border-radius: 15px;" href="#">
           <h1>ADD JOURNAL</h1>
         </button>
-        <div class="createJournalWindow" href="#">
+        <div class="createJournalWindow" style="border-radius: 20px;" href="#">
           <div class="col-lg-12">
             <div class="container">
               <div class="row">
@@ -64,8 +64,8 @@
                         <textarea class="form-control" id="input-content" rows="10"></textarea>
                       </div>
 
-                      <button type="button" class="btn btn-danger" id='cancel-button'>Cancel</button>
                       <button type="button" class="btn btn-primary" id='submit-button'>Submit</button>
+                      <button type="button" class="btn btn-danger" id='cancel-button'>Cancel</button>   
                 </div>
               </div>
 
