--- a/index.html
+++ b/index.html
@@ -58,18 +58,26 @@
                             <label for="input-temp">Temprature</label>
                             <input type="text" class="form-control" id="input-temp" placeholder="Temprature">
                           </div>  
+<!-- this goes after the temprature -->
+                          <div class="form-group">
+                              <label for="input-temp">Weather Condition</label>
+                              <input type="text" class="form-control" id="input-w-condition" placeholder="Temprature">
+                            </div> 
 
                     <div class="form-group">
                         <label for="input-content">Contents</label>
-                        <textarea class="form-control" id="input-content" rows="10"></textarea>
+                        <textarea class="form-control" id="input-content" rows="8"></textarea>
                       </div>
 
                       <button type="button" class="btn btn-danger" id='cancel-button'>Cancel</button>
                       <button type="button" class="btn btn-primary" id='submit-button'>Submit</button>
-                </div>
+                    </form>
+
+                    </div>
+            
               </div>
 
-              </form>
+             
             </div>
 
 
