--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container" style="background-color: black; margin: 0 auto; width: 100%; height: 100%;">
         <div class="row no-float">
             <div class="col-lg-9 no-float" style="background-color: lightblue;">
-                <div id="map" style="height: 100%;"></div>
+                <div id="map"></div>
                 <button class="btn createJournalButton" style="border-radius: 15px;" href="#">
                     <h1>ADD JOURNAL</h1>
                 </button>
