--- a/index.html
+++ b/index.html
@@ -74,19 +74,78 @@
             </div>
         </div>
     </div>
-
     <script>
         function initMap() {
-            var uluru = { lat: -25.363, lng: 131.044 };
+            // var locations = [
+            //     ['Bondi Beach', -33.890542, 151.274856, 0], //the name of the locaiton will be the title of the journal 
+            //     ['Coogee Beach', -33.923036, 151.259052, 0], // the
+            //     ['Cronulla Beach', -34.028249, 151.157507, 0],
+            //     ['Manly Beach', -33.80010128657071, 151.28747820854187, 0],
+            //     ['Maroubra Beach', -33.950198, 151.259302, 0]
+            // ];
+
+            var locaitons = [];
             var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4,
-                center: uluru
+                zoom: 4
             });
-            var marker = new google.maps.Marker({
-                position: uluru,
-                map: map
+            map.setCenter(new google.maps.LatLng(41.850033, -87.6500523));
+
+
+            database.ref().on("child_added", function (snap) {
+                entryKey = snap.key;
+
+                //initialize  vars
+                var title = snap.val().title;
+                var content = snap.val().content;
+                var lon = snap.val().lon;
+                var lat = snap.val().lat;
+                var temp = snap.val().temp;
+                var w_condition = snap.val().w_coidtion;
+
+                var iconBase = 'http://maps.google.com/mapfiles/kml/pal3';
+                var icons = {
+                    journalEntry: {
+                        icon: iconBase + '/icon54.png'
+                    }
+                };
+
+                marker = new google.maps.Marker({
+                    position: new google.maps.LatLng(lon, lat),
+                    map: map,
+                    icon: icons.journalEntry.icon
+                });
+
+                google.maps.event.addListener(marker, 'click', (function (marker) {
+                    return function () {
+
+
+                        // infowindow.setContent(title);
+                        // infowindow.open(map, marker);
+                        console.log(title);
+                    }
+                })(marker, title));
             });
+
+
+
+
+
+            // for (i = 0; i < locations.length; i++) {
+            //     marker = new google.maps.Marker({
+            //         position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+            //         map: map
+            //     });
+
+            //     google.maps.event.addListener(marker, 'click', (function (marker, i) {
+            //         return function () {
+            //             infowindow.setContent(locations[i][0]);
+            //             infowindow.open(map, marker);
+            //         }
+            //     })(marker, i));
+            // }
         }
+
+
     </script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV5nuOTlmfsvRYZpn--64G27L12SRtYkI&callback=initMap">
     </script>
