--- a/index.html
+++ b/index.html
@@ -28,43 +28,49 @@
                 </button>
                 <div class="createJournalWindow" style="border-radius: 20px;" href="#">
                     <div class="col-lg-12">
-                        <form class="add-journal">
-                            <div class="form-group">
-                                <label for="input-title">Title</label>
-                                <input type="text" class="form-control" id="input-title" placeholder="Title">
+                        <div class="display-div" id="form-div">
+                            <form class="add-journal">
+
+                                <div class="form-group">
+                                    <label for="input-title">Title</label>
+                                    <input type="text" class="form-control" id="input-title" placeholder="Title">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="input-lon">Longitutde</label>
+                                    <input type="text" class="form-control" id="input-lon" placeholder="Longitude">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="input-lat">Latitude</label>
+                                    <input type="text" class="form-control" id="input-lat" placeholder="Latitude">
+                                </div>
+
+
+
+                                <div class="form-group">
+                                    <label for="input-temp">Temprature</label>
+                                    <input type="text" class="form-control" id="input-temp" placeholder="Temprature">
+                                </div>
+                                <!-- this goes after the temprature -->
+                                <div class="form-group">
+                                    <label for="input-w-conditio">Weather Condition</label>
+                                    <input type="text" class="form-control" id="input-w-condition" placeholder="Weather Condition">
+                                </div>
+                                <div class="form-group">
+                                    <label for="input-content">Contents</label>
+                                    <textarea class="form-control" id="input-content" rows="10"></textarea>
+                                </div>
+
+
+
+                                <button type="button" class="btn btn-primary" id='submit-button'>Submit</button>
+                                <button type="button" class="btn btn-danger" id='cancel-button'>Cancel</button>
+                            </form>
+                        </div>
+                        <div class="display-div" id="entry-div">
+                            <p>Hello!</p>
                             </div>
-
-                            <div class="form-group">
-                                <label for="input-lon">Longitutde</label>
-                                <input type="text" class="form-control" id="input-lon" placeholder="Longitude">
-                            </div>
-
-                            <div class="form-group">
-                                <label for="input-lat">Latitude</label>
-                                <input type="text" class="form-control" id="input-lat" placeholder="Latitude">
-                            </div>
-
-
-
-                            <div class="form-group">
-                                <label for="input-temp">Temprature</label>
-                                <input type="text" class="form-control" id="input-temp" placeholder="Temprature">
-                            </div>
-                            <!-- this goes after the temprature -->
-                            <div class="form-group">
-                                <label for="input-w-conditio">Weather Condition</label>
-                                <input type="text" class="form-control" id="input-w-condition" placeholder="Weather Condition">
-                            </div>
-                            <div class="form-group">
-                                <label for="input-content">Contents</label>
-                                <textarea class="form-control" id="input-content" rows="10"></textarea>
-                            </div>
-
-
-
-                            <button type="button" class="btn btn-primary" id='submit-button'>Submit</button>
-                            <button type="button" class="btn btn-danger" id='cancel-button'>Cancel</button>
-                        </form>
                     </div>
                 </div>
             </div>
