--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 
   <script src="assets/javascript/app.js"></script>
   <script src="assets/javascript/api.js"></script>
+  <script src="assets/javascript/Geolocate.js"></script>
 
     <script>
         function initMap() {
