--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
     </script>
     <script src="assets/javascript/app.js"></script>
     <script src="assets/javascript/weather.js"></script>
+    <script src="assets/javascript/geolocation.js"></script>
 </body>
 
 </html>
