--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="col-lg-9 no-float" style="background-color: lightblue;">
                 <div id="map" style="height: 100%;"></div>
                 <button id="btnAdd" class="btn createJournalButton" style="border-radius: 15px;" href="#">
-                    <h1>Click here to share your experience with TravelJournal followers</h1>
+                    <h1>ADD JOURNAL</h1>
                 </button>
                 <div class="createJournalWindow" style="border-radius: 20px;" href="#">
-                    <div class="col-lg-12">      
+                    <div class="col-lg-12">
                         <div class="display-div" id="form-div">
                             <form class="add-journal">
 
@@ -72,7 +72,7 @@
                                 <button type="button" class="btn btn-danger" id='cancel-button'>Cancel</button>
                             </form>
                         </div>
-                        <div class="display-div" id="entry-div"><!-- guessing this is here for div debug?  ck - let me know -->
+                        <div class="display-div" id="entry-div">
                             <p>Hello!</p>
                             </div>
                     </div>
