Revert "changed css for journalEntry h4 and journalEntry p classes to add goo…"

--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-
-    <!-- google fonts link -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-
 </head>
 
 <body>
@@ -79,7 +75,7 @@
                 </div>
             </div>
             <div class="col-md-3 no-float" style="background-color: grey;">
-                <div id="listOfJournals" class="pre-scrollable scroll-full" ><!-- style="padding:0px;" this is now handled by css - ck  -->
+                <div id="listOfJournals" class="pre-scrollable scroll-full " style="padding:25px;">
                 </div>
             </div>
         </div>
