--- a/index.html
+++ b/index.html
@@ -35,145 +35,119 @@
                 <div id="map" style="height: 100%;"></div>
 
                 <!-- create journal button code -->
-                <button id="btnAdd" class="btn createJournalButton" style="border-radius: 15px;" href="#">
-                    <h1>Click here to share your experience with TravelJournal followers</h1>
+                <button id="btnAdd" class="btn createJournalButton" href="#">
+                    <h1>ADD JOURNAL</h1>
                 </button>
 
-                <!-- create journal window -->
+                <!-- .createJournalWindow window -->
                 <div class="createJournalWindow" style="border-radius: 20px;" href="#">
-                    <div class="col-lg-12">      
-                        
-                        
-                        <!-- display div for form -->
+                    <div class="col-lg-12">
+
+
+                        <!-- .display-div inside create journal widnow #form-div for form -->
                         <div class="display-div" id="form-div">
+                            <!-- form starts here -->
                             <form class="add-journal">
 
+                                <!-- title inputbox -->
                                 <div class="form-group">
                                     <label for="input-title">Title</label>
                                     <input type="text" class="form-control" id="input-title" placeholder="Title">
                                 </div>
 
-                                <div class="form-group">
-                                  <label for="input-title">Title</label>
-                                  <input type="text" class="form-control" id="input-title" placeholder="Title">
-                              </div>
-
-                                <div class="form-group">
-                                  <label for="input-city">City</label>
-                                  <input type="text" class="form-control" id="input-city" placeholder="City">
-                              </div>
-
-                                <div class="form-group">
-                                    <label for="input-lon">Longitutde</label>
-                                    <input type="text" class="form-control" id="input-lon" placeholder="Longitude">
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="input-lat">Latitude</label>
-                                    <input type="text" class="form-control" id="input-lat" placeholder="Latitude">
-                                </div>
+                                <!-- country Inputbox -->
+                                <!-- <div class="form-group"> -->
+                                <!-- <label for="input-country">Country</label> -->
+                                <input type="hidden" class="form-control" id="input-country" placeholder="country">
+                                <!-- </div> -->
 
 
+                                <!-- State Inputbox -->
+                                <!-- <div class="form-group"> -->
+                                <!-- <label for="input-state">State</label> -->
+                                <input type="hidden" class="form-control" id="input-state" placeholder="State">
+                                <!-- </div> -->
 
-                                <div class="form-group">
-                                    <label for="input-temp">Temprature</label>
-                                    <input type="text" class="form-control" id="input-temp" placeholder="Temprature">
-                                </div>
-                                <!-- this goes after the temprature -->
-                                <div class="form-group">
-                                    <label for="input-w-conditio">Weather Condition</label>
-                                    <input type="text" class="form-control" id="input-w-condition" placeholder="Weather Condition">
-                                </div>
+                                <!-- city inputbox -->
+                                <!-- <div class="form-group"> -->
+                                <!-- <label for="input-city">City</label> -->
+                                <input type="hidden" class="form-control" id="input-city" placeholder="City">
+                                <!-- </div> -->
+
+                                <!-- lat inputbox -->
+                                <!-- <div class="form-group"> -->
+                                <!-- <label for="input-lon">Longitutde</label> -->
+                                <input type="hidden" class="form-control" id="input-lon" placeholder="Longitude">
+                                <!-- </div> -->
+
+                                <!-- lat input -->
+                                <!-- <div class="form-group"> -->
+                                <!-- <label for="input-lat">Latitude</label> -->
+                                <input type="hidden" class="form-control" id="input-lat" placeholder="Latitude">
+                                <!-- </div> -->
+
+
+                                <!-- temp input -->
+                                <!-- <div class="form-group"> -->
+                                <!-- <label for="input-temp">Temprature</label> -->
+                                <input type="hidden" class="form-control" id="input-temp" placeholder="Temprature">
+                                <!-- </div> -->
+
+                                <!-- weather condition input -->
+                                <!-- <div class="form-group"> -->
+                                <!-- <label for="input-w-conditio">Weather Condition</label> -->
+                                <input type="hidden" class="form-control" id="input-w-condition" placeholder="Weather Condition">
+                                <!-- </div> -->
+
+                                <!-- contents text area -->
                                 <div class="form-group">
                                     <label for="input-content">Contents</label>
                                     <textarea class="form-control" id="input-content" rows="10"></textarea>
                                 </div>
 
 
-
+                                <!-- submit button -->
                                 <button type="button" class="btn btn-primary" id='submit-button'>Submit</button>
+
+                                <!-- cancel button -->
                                 <button type="button" class="btn btn-danger" id='cancel-button'>Cancel</button>
                             </form>
                         </div>
 
-                        <!-- display div for showing contents of the journal -->
-                        <div class="display-div" id="entry-div"><!-- guessing this is here for div debug?  ck - let me know -->
-                            <h4>Title: <div id="view-titlex"></div></h4>
-                            </div>
+                        <!-- .display-div changed id from entry-div to display-journal for showing contents of the journal -->
+                        <div class="display-div" id="display-journal">
+                            <!-- guessing this is here for div debug?  ck - let me know -->
+                            <h4>Title:
+                                <div id="view-titleX"></div>
+                            </h4>
+                            <p>Weather Condition:
+                                <div id="view-weather-tempX">, </div>
+                                <div id="view-weather-conditionX"></div>
+                            </p>
+                            <p>Location:
+                                <div id="view-regionX"></div>,
+                                <div id="view-cityX"></div>
+                            </p>
+                            <p>Contents:
+                                <div id="view-contentX"></div>
+                            </p>
+                        </div>
+                        <!-- end of view journal -->
                     </div>
                 </div>
                 <!-- end of create journal window -->
-
-
-
             </div>
 
             <!-- Journal column -->
             <div class="col-md-3 no-float" style="background-color: grey;">
-                <div id="listOfJournals" class="pre-scrollable scroll-full" ><!-- style="padding:0px;" this is now handled by css - ck  -->
+                <div id="listOfJournals" class="pre-scrollable scroll-full">
+                    <!-- style="padding:0px;" this is now handled by css - ck  -->
                 </div>
             </div>
         </div>
     </div>
-    <script>
-        function initMap() {
-            // var locations = [
-            //     ['Bondi Beach', -33.890542, 151.274856, 0], //the name of the locaiton will be the title of the journal 
-            //     ['Coogee Beach', -33.923036, 151.259052, 0], // the
-            //     ['Cronulla Beach', -34.028249, 151.157507, 0],
-            //     ['Manly Beach', -33.80010128657071, 151.28747820854187, 0],
-            //     ['Maroubra Beach', -33.950198, 151.259302, 0]
-            // ];
-            var locaitons = [];
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4
-            });
-            map.setCenter(new google.maps.LatLng(41.850033, -87.6500523));
-            database.ref().on("child_added", function (snap) {
-                entryKey = snap.key;
-                //initialize  vars
-                var title = snap.val().title;
-                var content = snap.val().content;
-                var city = snap.val().city;
-                var lon = snap.val().lon;
-                var lat = snap.val().lat;
-                var temp = snap.val().temp;
-                var w_condition = snap.val().w_coidtion;
-                var iconBase = 'http://maps.google.com/mapfiles/kml/pal3';
-                var icons = {
-                    journalEntry: {
-                        icon: iconBase + '/icon54.png'
-                    }
-                };
-                marker = new google.maps.Marker({
-                    position: new google.maps.LatLng(lon, lat),
-                    map: map,
-                    icon: icons.journalEntry.icon
-                });
-                google.maps.event.addListener(marker, 'click', (function (marker) {
-                    return function () {
-                        // infowindow.setContent(title);
-                        // infowindow.open(map, marker);
-                        console.log(title);
-                    }
-                })(marker, title));
-            });
-            // for (i = 0; i < locations.length; i++) {
-            //     marker = new google.maps.Marker({
-            //         position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-            //         map: map
-            //     });
-            //     google.maps.event.addListener(marker, 'click', (function (marker, i) {
-            //         return function () {
-            //             infowindow.setContent(locations[i][0]);
-            //             infowindow.open(map, marker);
-            //         }
-            //     })(marker, i));
-            // }
-        }
-    </script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV5nuOTlmfsvRYZpn--64G27L12SRtYkI&callback=initMap">
-    </script>
+    <script src="assets/javascript/map.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANNhzqVYqoSeLoMatGOb5YbIANBOR8ERo&callback=initMap"></script>
     <script src="assets/javascript/app.js"></script>
     <script src="assets/javascript/geoWeather.js"></script>
 </body>
