--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <!-- Main Container of all page -->
-    <div class="container" style="background-color: black; margin: 0 auto; width: 100%; height: 100%;">
+    <div class="container">
         <!-- the row for main container -->
         <div class="row no-float">
 
