--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
                         <!-- .display-div inside create journal widnow #form-div for form -->
-                        <div class="display-div" id="form-div">
+                        <div class="display-div" id="display-form-div">
                             <!-- form starts here -->
                             <form class="add-journal">
 
@@ -117,20 +117,26 @@
                         <!-- .display-div changed id from entry-div to display-journal for showing contents of the journal -->
                         <div class="display-div" id="display-journal">
                             <!-- guessing this is here for div debug?  ck - let me know -->
-                            <h4>Title:
+                            <h4>
                                 <div id="view-titleX"></div>
                             </h4>
-                            <p>Weather Condition:
+                            <p class="display-weather">Weather Condition:
                                 <div id="view-weather-tempX">, </div>
                                 <div id="view-weather-conditionX"></div>
                             </p>
-                            <p>Location:
-                                <div id="view-regionX"></div>,
-                                <div id="view-cityX"></div>
+                            <p class="display-location">Location:
+                                <div><span id="view-stateX"></span>, 
+                                <span id="view-cityX"></span>, 
+                                <span id="view-countryX"></span.></div>
+                                <div id="view-latX"></div>
+                                <div id="view-lonX"></div>
                             </p>
-                            <p>Contents:
+                            
+                            <p class="display-content">Contents:
                                 <div id="view-contentX"></div>
                             </p>
+                            <!-- cancel button -->
+                            <button type="button" class="btn btn-danger" id='cancel-button-journal'>Close</button>
                         </div>
                             <!-- end of view journal -->
 
@@ -150,82 +156,10 @@
             </div>
         </div>
     </div>
-    <script>
-        function initMap() {
-            // var locations = [
-            //     ['Bondi Beach', -33.890542, 151.274856, 0], //the name of the locaiton will be the title of the journal 
-            //     ['Coogee Beach', -33.923036, 151.259052, 0], // the
-            //     ['Cronulla Beach', -34.028249, 151.157507, 0],
-            //     ['Manly Beach', -33.80010128657071, 151.28747820854187, 0],
-            //     ['Maroubra Beach', -33.950198, 151.259302, 0]
-            // ];
-
-            var locaitons = [];
-            var map = new google.maps.Map(document.getElementById('map'), {
-                zoom: 4
-            });
-            map.setCenter(new google.maps.LatLng(41.850033, -87.6500523));
-
-
-            database.ref().on("child_added", function (snap) {
-                entryKey = snap.key;
-
-                //initialize  vars
-                var title = snap.val().title;
-                var content = snap.val().content;
-                var city = snap.val().city;
-                var lon = snap.val().lon;
-                var lat = snap.val().lat;
-                var temp = snap.val().temp;
-                var w_condition = snap.val().w_coidtion;
-
-                var iconBase = 'http://maps.google.com/mapfiles/kml/pal3';
-                var icons = {
-                    journalEntry: {
-                        icon: iconBase + '/icon54.png'
-                    }
-                };
-
-                marker = new google.maps.Marker({
-                    position: new google.maps.LatLng(lat, lon),
-                    map: map,
-                    icon: icons.journalEntry.icon
-                });
-
-                google.maps.event.addListener(marker, 'click', (function (marker) {
-                    return function () {
-
-
-                        // infowindow.setContent(title);
-                        // infowindow.open(map, marker);
-                        console.log(title);
-                    }
-                })(marker, title));
-            });
-
-
-
-
-
-            // for (i = 0; i < locations.length; i++) {
-            //     marker = new google.maps.Marker({
-            //         position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-            //         map: map
-            //     });
-
-            //     google.maps.event.addListener(marker, 'click', (function (marker, i) {
-            //         return function () {
-            //             infowindow.setContent(locations[i][0]);
-            //             infowindow.open(map, marker);
-            //         }
-            //     })(marker, i));
-            // }
-        }
-
-
-    </script>
+   
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAV5nuOTlmfsvRYZpn--64G27L12SRtYkI&callback=initMap">
     </script>
+    <script src="assets/javascript/map.js"></script>
     <script src="assets/javascript/app.js"></script>
     <script src="assets/javascript/geoWeather.js"></script>
 </body>
