--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- google fonts link -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 
+    <!-- moment js CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script>
+
 </head>
 
 <body>
@@ -120,6 +123,7 @@
                             <h4>
                                 <div id="view-titleX"></div>
                             </h4>
+                            <div id="view-date-timeX"></div>
                             <p class="display-weather">Weather Condition:
                                 <div id="view-weather-tempX">, </div>
                                 <div id="view-weather-conditionX"></div>
